[tool.poetry]
name = "pybts"
version = "1.3.1"
description = ""
authors = ["王童 <785271992@qq.com>"]
readme = "README.md"
homepage = "https://github.com/wangtong2015/pybts"
repository = "https://github.com/wangtong2015/pybts"
keywords = ["BehaviorTree", "AI"]
include = ["README.md", "pybts/templates/static/*", 'pybts/templates/*', 'README.assets']

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
py-trees = "^2.2.3"
jinja2 = "^3.1.3"
flask = "^3.0.2"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pybts = 'pybts.main:main'
