[tool.poetry]
name = "pybts"
version = "1.3.3"
description = ""
authors = ["王童 <785271992@qq.com>"]
readme = "README.md"
homepage = "https://github.com/wangtong2015/pybts"
repository = "https://github.com/wangtong2015/pybts"
keywords = ["BehaviorTree", "AI"]
include = ["README.md", "pybts/templates/static/*", 'pybts/templates/*', 'README.assets']

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
py-trees = "^2.2.3"
jinja2 = "^3.1.3"
flask = "^3.0.2"
tqdm = "^4.66.2"
gymnasium = {version = "^0.29.1", optional = true}
torch = {version = "^2.2.2", optional = true}
stable-baselines3 = {version = "^2.3.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pybts = 'pybts.main:main'

[tool.poetry.extras]
rl = ['gymnasium', 'torch', 'numpy', 'stable_baselines3']
